--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "template-typescript",
     "version": "1.0.0",
-    "description": "ts项目模板",
+    "description": "阿圆表情包仓库",
     "main": "src/app.ts",
     "repository": "https://github.com/alongw/template-typescript",
     "author": "alongw <alongw@alongw.cn>",
@@ -24,6 +24,8 @@
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-angular": "^17.6.5",
         "@commitlint/cz-commitlint": "^17.5.0",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
         "@types/node": "^20.4.0",
         "@types/shelljs": "^0.8.12",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
@@ -46,7 +48,10 @@
         }
     },
     "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
         "log4js": "^6.9.1",
-        "shelljs": "^0.8.5"
+        "shelljs": "^0.8.5",
+        "yaml": "^2.3.1"
     }
 }
